# FREERTOS-Windows

./: LICENSE  README.md
FREERTOS_CLion/: CMakeLists.txt
FREERTOS_CLion/src/: main.c
FREERTOS_VsCode/include/: FreeRTOSConfig.h
